--- a/FitnessUI/FitnessUI/FitnessUI.csproj
+++ b/FitnessUI/FitnessUI/FitnessUI.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\MainPagePic\" />
+    <Folder Include="wwwroot\UserHomePage\" />
+  </ItemGroup>
+
 </Project>
